Exercises for JavaScript&jQuery v 0.8 - jQuery and events example
Two exercises nr. 5 introducing jQuery and their effectiveness and nr. 6 showing way how to handle variety of events created.

--- a/cv_3/index.htm
+++ b/cv_3/index.htm
@@ -14,7 +14,7 @@
 
         <img class="center convert_to_block" src="http://localhost/javascript_cvicenia/cv_3/images/banner.png" alt="Banner with name Quadratic equation solver and calculus formulas.">
         <br />
-        <h2>Please fill in total rainfall in mm for appropriate month into a fieleds bellow</h2>
+        <h2>Please fill in total rainfall in mm for appropriate month into a fields bellow</h2>
         
         
         <table class="center">
